# legal_assistant

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/api/: server.py
src/api/core/services/: redis_service.py
src/api/modules/interactions/: interactions_controller.py  interactions_dependencies.py  interactions_models.py  interactions_routes.py  interactions_ws.py
src/api/modules/websocket/: interactions_ws.py  websocket_dependencies.py  (+2 more)
src/api/websocket/: connections.py  transport.py
src/app/: main.py
src/app/setup/: startup_event.py
src/dependencies/: configure_container.py  services.py
src/features/web_sockets/: transport.py
src/llm/: dependencies.py  graph.py  state.py
src/llm/dependencies/: agents.py  handlers.py  producers.py  repositories.py  services.py  use_cases.py
src/llm/domain/: entities.py  models.py  state.py
src/llm/events/: scehmas.py  setup.py
src/llm/utils/: publish_output.py
src/shared/dependencies/: configure_container.py  container.py  services.py  use_cases.py
src/shared/utils/: greetings.py
src/utils/decorators/: error_hanlder.py
src/voice/dependencies/: services.py
src/web_sockets/: transport.py
src/web_sockets/dependencies/: services.py  use_cases.py
src/workflow/: dependencies.py  graph.py  state.py
src/workflow/services/: embeddings_service.py  prompt_service.py
tests/e2e/: test_general_legal_agent.py
tests/integration/: test_routing_agent.py
tests/unit/: test_company_legal_agent.py  test_general_research_agent.py  test_graph.py  test_research_aggregator.py  test_routing_agent.py
(+63 files in other folders)
