[project]
name = "legal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-lifespan>=2.1.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "openai>=1.99.7",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "qdrant-client>=1.15.1",
    "redis>=6.4.0",
    "unstructured>=0.18.11",
    "uvicorn>=0.35.0",
]
