[project]
name = "legal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "expertise-chats",
    "langgraph>=0.6.4",
    "pydantic>=2.11.7",
    "unstructured>=0.18.11",
]

[tool.uv.sources]
expertise-chats = { git = "https://github.com/BrenDev0/expertise_chats_shared.git" }
